Add vector include outside of anonymous namespace.

This fixes a compiler error on later versions of MSVS.

This adds a '#include <vector>' outside of the anonymous namespace, to
prevent it from being included later within the anonymous namespace.

Note: A full solution would be to cherry pick the fix from this mozilla bug:
https://bugzilla.mozilla.org/show_bug.cgi?id=1416183

Change-Id: I8cd8ef4b56d4bafde0a1d9de57b6971e554f716d
(cherry picked from commit 025c00f3127267e0f0343283a7deac572598f5d1)