third_party/mozjs-45/mfbt/mfbt_Compression.cpp
@@ -21,6 +21,7 @@ using namespace mozilla::Compression;
 // later within the anonymous namespace.
 #ifdef _MSC_VER
 #include <intrin.h>
+#include <vector>
 #endif
 
 namespace {
